# sdd-flow

./: .gitignore  LICENSE  README.md  run-dev.sh
code/backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  run.sh
code/backend/alembic/: env.py
code/backend/alembic/versions/: 69d9f5ff4df9_initial.py  a1b2c3d4e5f6_add_draft_and_pending_states.py  b2c3d4e5f6a7_add_path_to_crs_and_bugs.py  c3d4e5f6a7b8_add_deleted_status_to_crs_and_bugs.py  d4e5f6a7b8c9_add_password_reset_tokens.py  e5f6a7b8c9d0_add_number_and_slug_to_crs_and_bugs.py  f6a7b8c9d0e1_add_worker_tables.py  g7b8c9d0e1f2_add_job_type_to_worker_jobs.py  h8c9d0e1f2a3_add_worker_branch_model_sync_type.py  i9d0e1f2a3b4_add_changed_files_to_worker_jobs.py  j0e1f2a3b4c5_add_custom_job_type.py  k1f2a3b4c5d6_rename_sync_to_build_drop_apply.py
code/backend/app/: config.py  main.py
code/backend/app/api/: api_keys.py  audit_log.py  auth.py  bugs.py  change_requests.py  cli.py  docs.py  notifications.py  projects.py  search.py  tenants.py  workers.py  workers_cli.py
code/backend/app/db/: base.py  mongodb.py  session.py
code/backend/app/middleware/: auth.py
code/backend/app/models/: __init__.py  api_key.py  audit_log_entry.py  base.py  bug.py  change_request.py  comment.py  document_file.py  notification.py  notification_preference.py  password_reset_token.py  project.py  refresh_token.py  tenant.py  tenant_invitation.py  tenant_member.py  user.py  worker.py  worker_job.py  worker_job_message.py
code/backend/app/repositories/: __init__.py  audit_repository.py  auth_repository.py  base.py  bug_repository.py  change_request_repository.py  (+7 more)
code/backend/tests/: conftest.py  test_api_key_auth.py  test_api_keys.py  test_audit_log.py  test_auth.py  test_auth_tokens.py  test_bugs.py  test_change_requests.py  test_cli.py  test_cross_project.py  test_docs.py  test_health.py  test_input_sanitization.py  test_notifications.py  test_pagination.py  test_projects.py  test_remove_member.py  test_search.py  test_tenants.py  test_transitions.py  test_workers.py
(+217 files in other folders)
